# grocerylist

database/: create-db.sh  init.sql
database/snapshots/: snapshot.sql  snapshot_2.sql
reactNativeFrontend/: .prettierrc.js  app.json  babel.config.js  index.js  package-lock.json  package.json  tsconfig.json
reactNativeFrontend/android/: settings.gradle
reactNativeFrontend/android/app/: build.gradle
reactNativeFrontend/ios/: Podfile
reactNativeFrontend/ios/reactNativeFrontend/: AppDelegate.mm  Info.plist
reactNativeFrontend/ios/reactNativeFrontend.xcodeproj/: project.pbxproj
reactNativeFrontend/src/: App.tsx
reactNativeFrontend/src/constants/: categories.constants.ts  colors.constants.ts
reactNativeFrontend/src/middleware/: ws.middleware.ts
reactNativeFrontend/src/screens/: AnimationTest.tsx  ItemsScreen.tsx  ListScreen.tsx  ListsScreen.tsx  LoginScreen.tsx
reactNativeFrontend/src/services/: LocationService.ts
reactNativeFrontend/src/stores/: UserStore.ts
rust-backend/: .env  Cargo.toml
rust-backend/src/: lib.rs  main.rs  routes.rs
rust-backend/src/config/: mod.rs  postgres_config.rs
rust-backend/src/handlers/: list_handler.rs  login_handler.rs  mod.rs  ws_handler.rs
rust-backend/src/repository/: categories_repository.rs  items_repository.rs  lists_repository.rs  mod.rs  repository.rs  users_repository.rs
rust-backend/src/services/: mod.rs  word2vec.rs
rust-backend/src/websockets/: messages.rs  server.rs  session.rs
rust-backend/word2vec/: Cargo.toml
rust-backend/word2vec/src/: main.rs
vanilla-frontend/: index.html  login.html
(+4 files in other folders)
