[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.1"
actix-cors = "0.7.0"
actix-web = "4.4.1"
actix-web-actors = "4.2.0"
config = "0.13.4"
deadpool-postgres = {version = "0.12.1", features = ["serde"]}
derive_more = "0.99.17"
dotenvy = "0.15.7"
futures = "0.3.30"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.111"
tokio = "1.35.1"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = {version="0.7.10", features=["with-uuid-1"]}
uuid = {version = "1.6.1", features = ["v4", "serde"]}
